--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -405,13 +405,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def twoSum(self, numbers: List[int], target: int) -> List[int]:\n",
@@ -903,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,14 +1152,12 @@
     "        \n",
     "        m = 0\n",
     "        flowerbed = [0] + flowerbed + [0]\n",
-    "        for i in range(0,len(flowerbed)-2):\n",
-    "            num=0\n",
-    "            num=flowerbed[i]+flowerbed[i+1]+flowerbed[i+2]\n",
-    "            if num ==0:\n",
+    "        for i in range(len(flowerbed)):\n",
+    "            if flowerbed[i:i+3] ==[0, 0, 0]:\n",
     "                m += 1\n",
     "                flowerbed[i+1] = 1\n",
-    "        if m >= n:\n",
-    "            return True"
+    "                \n",
+    "        return m >= n"
    ]
   },
   {
@@ -1188,10 +1179,10 @@
     "        :type nums: List[int]\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        \n",
     "        nums = sorted(nums)\n",
     "        a = nums[-3] * nums[-2] * nums[-1]\n",
     "        b = nums[0] * nums[1] * nums[-1]\n",
+    "\n",
     "        return max(a, b)"
    ]
   },
@@ -1199,7 +1190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "## 643. Maximum Average Subarray I"
    ]
   },
   {
@@ -1207,21 +1198,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## "
+    "nums = [6,8,6,8,0,4,1,2,9,9]; k = 2\n",
+    "\n",
+    "a =  [0 for _ in range(len(nums))]\n",
+    "a[:k] = nums[:k]\n",
+    "a[k-1] = sum(nums[:k])\n",
+    "for i in range(k, len(nums)):\n",
+    "    print(a[i-1], nums[i], a[i-k])\n",
+    "    a[i] = a[i-1] + nums[i] - a[i-k]\n",
+    "    print(a)\n",
+    "\n",
+    "\n",
+    "# max(a) / k"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
