--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/1.jpg\" style=\"zoom:50%\" />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1199,19 +1206,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums = [6,8,6,8,0,4,1,2,9,9]; k = 2\n",
+    "class Solution(object):\n",
+    "    def findMaxAverage(self, nums, k):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :type k: int\n",
+    "        :rtype: float\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # a =  [0 for _ in range(len(nums))]\n",
+    "        # a[0] = nums[0]\n",
+    "        # for i in range(1, len(nums)):\n",
+    "        #     a[i] = a[i-1] + nums[i]\n",
     "\n",
-    "a =  [0 for _ in range(len(nums))]\n",
-    "a[:k] = nums[:k]\n",
-    "a[k-1] = sum(nums[:k])\n",
-    "for i in range(k, len(nums)):\n",
-    "    print(a[i-1], nums[i], a[i-k])\n",
-    "    a[i] = a[i-1] + nums[i] - a[i-k]\n",
-    "    print(a)\n",
+    "        # b = a[k-1]\n",
+    "        # for i in range(k, len(a)):\n",
+    "        #     b =  max(b, a[i] - a[i-k])\n",
     "\n",
+    "        # return b * 1.0 / k\n",
     "\n",
-    "# max(a) / k"
+    "        sum = 0\n",
+    "        a = float('-inf')\n",
+    "        for i in range(len(nums)):\n",
+    "            sum += nums[i]\n",
+    "            if i >= k:\n",
+    "                sum -= nums[i - k]\n",
+    "            if i >= k - 1:\n",
+    "                a = max(a, sum)\n",
+    "                \n",
+    "        return a / float(k)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 645. Set Mismatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def findErrorNums(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        temp = [0 for _ in nums]\n",
+    "        for num in nums:\n",
+    "            temp[num-1] += 1\n",
+    "\n",
+    "        for i in range(len(nums)):\n",
+    "            if temp[i] == 2:\n",
+    "                repeat = i + 1\n",
+    "            if temp[i] == 0:\n",
+    "                lost = i + 1\n",
+    "                \n",
+    "        return [repeat, lost]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 661. Image Smoother"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def imageSmoother(self, img: List[List[int]]) -> List[List[int]]:\n",
+    "        \n",
+    "        total1 = []\n",
+    "        for row in range(len(img)):\n",
+    "            total2 = []\n",
+    "            for col in range(len(img[0])):\n",
+    "                temp = 0\n",
+    "                count = 0\n",
+    "                for r in range(row-1, row+2):\n",
+    "                    for c in range(col-1, col+2):\n",
+    "                        if (r >= 0) and (r < len(img)) and (c >= 0) and (c < len(img[0])):\n",
+    "                            temp += img[r][c]\n",
+    "                            count += 1\n",
+    "                temp //= count\n",
+    "                total2.append(temp)\n",
+    "            total1.append(total2)\n",
+    "\n",
+    "        return total1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 674. Longest Continuous Increasing Subsequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findLengthOfLCIS(self, nums: List[int]) -> int:\n",
+    "        a = 1\n",
+    "        b = 1\n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i] > nums[i-1]:\n",
+    "                b += 1\n",
+    "                a = max(a, b)\n",
+    "            else:\n",
+    "                b = 1 \n",
+    "        return a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 682. Baseball Game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1232,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
