--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -1342,6 +1342,103 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def calPoints(self, ops: List[str]) -> int:\n",
+    "        \n",
+    "        output = []\n",
+    "        for i in range(len(ops)):\n",
+    "            if ops[i] not in [\"+\", \"D\", \"C\"]:\n",
+    "                output.append(int(ops[i]))\n",
+    "            elif ops[i] == \"+\":\n",
+    "                output.append(int(output[-1])+int(output[-2]))\n",
+    "            elif ops[i] == \"D\":\n",
+    "                output.append(int(output[-1])*2)\n",
+    "            elif ops[i] == \"C\":\n",
+    "                output.pop(len(output)-1)\n",
+    "        \n",
+    "        return sum(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 697. Degree of an Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findShortestSubArray(self, nums: List[int]) -> int:\n",
+    "        count = dict()\n",
+    "        start = dict()\n",
+    "        end = dict()\n",
+    "        length = dict()\n",
+    "        max_count = 0\n",
+    "        for i, num in enumerate(nums):\n",
+    "            if num not in count:\n",
+    "                count[num] = 1\n",
+    "                start[num] = i\n",
+    "                end[num] = i\n",
+    "            else:\n",
+    "                count[num] += 1\n",
+    "                end[num] = i\n",
+    "            max_count = max(max_count, count[num])\n",
+    "            length[num] = end[num] - start[num] + 1\n",
+    "        \n",
+    "        output = len(nums)\n",
+    "        for num in count:\n",
+    "            if (count[num] == max_count):\n",
+    "                output = min(output, length[num])\n",
+    "                \n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 704. Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 705. Design HashSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 706. Design HashMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -1363,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
