--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -1411,7 +1411,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "        while left <= right:\n",
+    "            middle = (left + right) // 2\n",
+    "            print(left, right, middle)\n",
+    "            if nums[middle] == target:\n",
+    "                return middle\n",
+    "            elif nums[middle] > target:\n",
+    "                right = middle - 1\n",
+    "            else:\n",
+    "                left = middle + 1\n",
+    "            \n",
+    "        return -1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1460,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
