--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -1441,7 +1441,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyHashSet:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.temp = []\n",
+    "\n",
+    "    def add(self, key: int) -> None:\n",
+    "        if key not in self.temp:\n",
+    "            self.temp.append(key)\n",
+    "            return self.temp\n",
+    "\n",
+    "    def remove(self, key: int) -> None:\n",
+    "        if key in self.temp:\n",
+    "            self.temp.remove(key)\n",
+    "            return self.temp\n",
+    "\n",
+    "    def contains(self, key: int) -> bool:\n",
+    "        if key in self.temp:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MyHashSet object will be instantiated and called as such:\n",
+    "# obj = MyHashSet()\n",
+    "# obj.add(key)\n",
+    "# obj.remove(key)\n",
+    "# param_3 = obj.contains(key)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1455,7 +1484,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyHashMap:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.Key = []\n",
+    "        self.Value = []\n",
+    "\n",
+    "    def put(self, key: int, value: int) -> None:\n",
+    "        if key not in self.Key:\n",
+    "            self.Key.append(key)\n",
+    "            self.Value.append(value)\n",
+    "        else:\n",
+    "            ind = self.Key.index(key)\n",
+    "            self.Value[ind] = value\n",
+    "        return self.Key, self.Value\n",
+    "\n",
+    "    def get(self, key: int) -> int:\n",
+    "        if key in self.Key:\n",
+    "            ind = self.Key.index(key)\n",
+    "            value = self.Value[ind]\n",
+    "            return value\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "    def remove(self, key: int) -> None:\n",
+    "        if key in self.Key:\n",
+    "            ind = self.Key.index(key)\n",
+    "            self.Key.pop(ind)\n",
+    "            self.Value.pop(ind)\n",
+    "        return self.Key, self.Value\n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MyHashMap object will be instantiated and called as such:\n",
+    "# obj = MyHashMap()\n",
+    "# obj.put(key,value)\n",
+    "# param_2 = obj.get(key)\n",
+    "# obj.remove(key)"
+   ]
   }
  ],
  "metadata": {
@@ -1476,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
