--- a/LeetCode.ipynb
+++ b/LeetCode.ipynb
@@ -1523,6 +1523,66 @@
     "# param_2 = obj.get(key)\n",
     "# obj.remove(key)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 717. 1-bit and 2-bit Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isOneBitCharacter(self, bits: List[int]) -> bool:\n",
+    "        i = 0\n",
+    "        while i < len(bits) - 1:\n",
+    "            print(i, len(bits))\n",
+    "            if bits[i] == 1:\n",
+    "                i += 2\n",
+    "            elif bits[i] == 0:\n",
+    "                i += 1\n",
+    "        return i == len(bits) - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 724. Find Pivot Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def pivotIndex(self, nums: List[int]) -> int:\n",
+    "        for i in range(len(nums)):\n",
+    "            if sum(nums[:i]) == sum(nums[i+1:]):\n",
+    "                return i\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 733. Flood Fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
