--- a/705.ipynb
+++ b/705.ipynb
@@ -8,6 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 建一個空list\n",
+    "### 2. add  \n",
+    "#### 如果list裡面沒有這個值，就新增進list裡\n",
+    "### 3. remove\n",
+    "#### 如果list裡面有這個值，就從list裡刪除該值\n",
+    "### 4. contains\n",
+    "#### 如果list裡面有這個值，就返回True，否則返回False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
