--- a/706.ipynb
+++ b/706.ipynb
@@ -8,6 +8,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 新建兩個空list，Key和Value\n",
+    "### 2. put\n",
+    "如果key不在Key裡，新增key和value進Key和Value  \n",
+    "如果key在Key裡，找出key在Key的index，更新Value在index位置的值\n",
+    "### 3. get\n",
+    "如果key在Key裡，找出key在Key的index，返回Value在index位置的值\n",
+    "如果key不在Key裡，返回-1\n",
+    "### 4. remove\n",
+    "如果key在Key裡，找出key在Key的index，刪除Key和Value在index位置的值"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
