--- a/724.ipynb
+++ b/724.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### index左邊的加總 = index右邊的加總\n",
+    "### 迴圈依序計算即可"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
