--- a/717.ipynb
+++ b/717.ipynb
@@ -27,8 +27,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d8c1a87e4764ea7881547c536887df2e9c9ef9a1d8b44ae688e9c35499972fab"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.9 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
