--- a/746.ipynb
+++ b/746.ipynb
@@ -4,19 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 744. Find Smallest Letter Greater Than Target"
+    "## 746. Min Cost Climbing Stairs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### 1. 將target加入letters\n",
-    "### 2. list轉為set刪除重複的值\n",
-    "### 3. 排序\n",
-    "### 4. 抓出target的位置\n",
-    "### 5. 返回target位置的下一個值"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -24,16 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def nextGreatestLetter(self, letters: List[str], target: str) -> str:\n",
-    "        letters.append(target)\n",
-    "        letters = set(letters)\n",
-    "        letters = sorted(letters)\n",
-    "        ind = letters.index(target)\n",
-    "        try:\n",
-    "            return letters[ind + 1]\n",
-    "        except:\n",
-    "            return letters[0]"
+    "cost = [10,15,20]"
    ]
   }
  ],
