--- a/747.ipynb
+++ b/747.ipynb
@@ -4,44 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 746. Min Cost Climbing Stairs"
+    "## 747. Largest Number At Least Twice of Others"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/746.svg\"/>"
+    "<img src=\"img/747.svg\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def minCostClimbingStairs(self, cost: List[int]) -> int:\n",
-    "        temp = dict()\n",
-    "        temp[0] = cost[0]\n",
-    "        temp[1] = cost[1]\n",
-    "        for i in range(2, len(cost)):\n",
-    "            one = temp[i-1] + cost[i]\n",
-    "            two = temp[i-2] + cost[i]\n",
-    "            temp[i] = min(one, two)\n",
-    "            \n",
-    "        return min(temp[len(cost)-1], temp[len(cost)-2])"
+    "    def dominantIndex(self, nums: List[int]) -> int:\n",
+    "        if len(nums) == 1:\n",
+    "            return 0\n",
+    "        \n",
+    "        temp = sorted(nums)\n",
+    "        if temp[-1] >= (temp[-2] * 2):\n",
+    "            return nums.index(temp[-1])\n",
+    "        else:\n",
+    "            return -1"
    ]
   }
  ],
