--- a/748.ipynb
+++ b/748.ipynb
@@ -11,83 +11,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/747.svg\"/>"
+    "#### 1. licensePlate轉小寫\n",
+    "#### 2. licensePlate刪除空格\n",
+    "#### 3. licensePlate刪除數字\n",
+    "#### 4. 依序抓出每個詞\n",
+    "#### 5. 新增一個temp=licensePlate (避免之後刪除字母時修改到原始數據)\n",
+    "#### 6. 依序抓出每個詞的每個字母，如果字母在temp中，就刪除temp中的該字母\n",
+    "#### 7. 如果該詞跑完後temp裡沒有字母，該詞就符合題目要求\n",
+    "#### 8. 最後判斷若同時有數個詞符合要求時，保留字數最短的詞\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "licensePlate = \"1s3 PSt\"\n",
-    "words = [\"step\",\"steps\",\"stripe\",\"stepple\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'spst'"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "licensePlate = licensePlate.lower()\n",
-    "licensePlate = licensePlate.replace(\" \", \"\")\n",
-    "licensePlate = re.sub(r'[0-9]+', '', licensePlate)\n",
-    "licensePlate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pt\n",
-      "p\n",
-      "p\n",
-      "\n",
-      "pt\n",
-      "p\n",
-      "p\n",
-      "\n",
-      "\n",
-      "pt\n",
-      "p\n",
-      "p\n",
-      "p\n",
-      "\n",
-      "\n",
-      "pt\n",
-      "p\n",
-      "p\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in words:\n",
-    "    temp = licensePlate\n",
-    "    for j in i:\n",
-    "        if j in temp:\n",
-    "            temp = temp.replace(j, \"\")\n",
-    "        print(temp)"
+    "class Solution:\n",
+    "    def shortestCompletingWord(self, licensePlate: str, words: List[str]) -> str:\n",
+    "        licensePlate = licensePlate.lower()\n",
+    "        licensePlate = licensePlate.replace(\" \", \"\")\n",
+    "        licensePlate = re.sub(r'[0-9]+', '', licensePlate)\n",
+    "\n",
+    "        length = 15 \n",
+    "        for i in words:\n",
+    "            temp = licensePlate\n",
+    "            for j in i:\n",
+    "                if j in temp:\n",
+    "                    temp = temp.replace(j, \"\", 1)\n",
+    "                    # print(i, temp)\n",
+    "            if temp == \"\":\n",
+    "                if len(i) < length:\n",
+    "                    length = len(i)\n",
+    "                    word = i\n",
+    "                    print(word)\n",
+    "                    \n",
+    "        return word"
    ]
   }
  ],
@@ -109,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
