--- a/766.ipynb
+++ b/766.ipynb
@@ -10,93 +10,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "matrix = [[1,2,3,4],[5,1,2,3],[9,5,1,2]]"
+    "### 第一個row和第一個column的值不判斷，直接返回True\n",
+    "### 其他位置的值需判斷是否等於其左上角的對角線上的值"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = list()\n",
-    "temp.append([0] + [0] + matrix[0])\n",
-    "temp.append([0] + matrix[1] + [0])\n",
-    "temp.append(matrix[2] + [0] + [0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(matrix) - 1"
+    "class Solution:\n",
+    "    def isToeplitzMatrix(self, matrix: List[List[int]]) -> bool:\n",
+    "        temp = []\n",
+    "        for row in range(len(matrix)):\n",
+    "            for col in range(len(matrix[0])):\n",
+    "                temp.append( (row == 0) or (col == 0) or (matrix[row][col]== matrix[row-1][col-1]) )\n",
+    "        \n",
+    "        return all(temp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0, 9), (0, 5, 5), (1, 1, 1), (2, 2, 2), (3, 3, 0), (4, 0, 0)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = list(zip(*temp))\n",
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for r in range(len(temp)):\n",
-    "    temp[r] = list(temp[r])\n",
-    "    if 0 in temp[r]:\n",
-    "        temp[r].remove(0)\n",
-    "\n",
-    "    if len(set(temp[r])) != 1:\n",
-    "        # return False\n",
-    "        print(False)\n",
-    "# return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
