--- a/804.ipynb
+++ b/804.ipynb
@@ -29,7 +29,7 @@
     "        morse = [\".-\",\"-...\",\"-.-.\",\"-..\",\".\",\"..-.\",\"--.\",\"....\",\"..\",\".---\",\"-.-\",\".-..\",\"--\",\"-.\",\"---\",\".--.\",\n",
     "                 \"--.-\",\".-.\",\"...\",\"-\",\"..-\",\"...-\",\".--\",\"-..-\",\"-.--\",\"--..\"]\n",
     "        \n",
-    "        alphabet = list(map(chr, range(97, 123)))\n",
+    "        alphabet = list(map(chr, range(97, 123)))#小寫a~z\n",
     "        \n",
     "        # 建一個叫hash的dictionary，字母為key，摩斯密碼為value\n",
     "        hash = dict()\n",
