update image & miss152 code

--- a/169.ipynb
+++ b/169.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/169.jpg\" style=\"zoom:50%\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
