--- a/806.ipynb
+++ b/806.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 806. Number of Lines To Write String"
+    "## 806. Number of Lines To Write String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 新增字典temp，key為字母，value為字母長度\n",
+    "### 2. 依序抓出字符串的字母，每抓出一個就在length加上該字母的長度，若加上時常度會超過100，則換行(line + 1)，且length歸0重算\n",
+    "### 3. 求最後的行數和length"
    ]
   },
   {
