--- a/812.ipynb
+++ b/812.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/812.png\"  width = \"600px\"/>"
+    "<img src=\"img/812.png\" style=\"zoom:30%\"/>"
    ]
   },
   {
