--- a/152.ipynb
+++ b/152.ipynb
@@ -19,7 +19,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def maxProduct(self, nums: List[int]) -> int:\n",
+    "        l = len(nums)\n",
+    "        dpmax = [0 for _ in range(l)]\n",
+    "        dpmin = [0 for _ in range(l)]\n",
+    "        \n",
+    "        dpmax[0] = nums[0]\n",
+    "        dpmin[0] = nums[0]\n",
+    "        for i in range(1, l):\n",
+    "            dpmax[i] = max(nums[i], max(nums[i] * dpmax[i - 1], nums[i] * dpmin[i - 1]))\n",
+    "            dpmin[i] = min(nums[i], min(nums[i] * dpmax[i - 1], nums[i] * dpmin[i - 1]))\n",
+    "        \n",
+    "        return max(dpmax)"
+   ]
   }
  ],
  "metadata": {
