--- a/883.ipynb
+++ b/883.ipynb
@@ -10,16 +10,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### xy: 有幾根柱子，陰影面積就是多少\n",
+    "#### xz: 每個list裡的最大值的總和\n",
+    "#### yz: 所有list中第0個位置的最大值，加上所有list中第1個位置的最大值...，加上所有list中第n個位置的最大"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def projectionArea(self, grid: List[List[int]]) -> int:\n",
+    "        xy = 0\n",
+    "        xz = 0\n",
+    "        yz = [0] * len(grid[0])\n",
+    "        for i in grid:\n",
+    "            xz += max(i)\n",
+    "            for j in range(len(i)):\n",
+    "                if i[j] != 0:\n",
+    "                    xy += 1\n",
+    "\n",
+    "                if i[j] > yz[j]:\n",
+    "                    yz[j] = i[j]\n",
+    "\n",
+    "        return xy + xz + sum(yz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "grid = [[1,2],[3,4]]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -40,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
