--- a/148.ipynb
+++ b/148.ipynb
@@ -12,39 +12,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class ListNode:\n",
-    "    def __init__(self, val=0, next=None):\n",
-    "        self.val = val\n",
-    "        self.next = next"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "head = ListNode(4)\n",
-    "data_1 = ListNode(2)\n",
-    "head.next = data_1\n",
-    "data_2 = ListNode(1)\n",
-    "data_1.next = data_2\n",
-    "data_3 = ListNode(3)\n",
-    "data_2.next = data_3\n",
-    "data_4 = ListNode(-1)\n",
-    "data_3.next = data_4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pre, slow, fast = head, head, head\n",
-    "while fast and fast.next:"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -52,6 +20,60 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def sortList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        if not head or not head.next:\n",
+    "            return head\n",
+    "        \n",
+    "        pre, slow, fast = head, head, head\n",
+    "        while fast and fast.next:\n",
+    "            pre = slow\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "        pre.next = None\n",
+    "        # print(f\"head:{head}\")\n",
+    "        # print(f\"slow:{slow}\")\n",
+    "        \n",
+    "        # print(\"+++++++++++\")\n",
+    "        # print(f\"head:{head}\")\n",
+    "        l1 = self.sortList(head)\n",
+    "        # print(f\"l1:{l1}\")\n",
+    "        \n",
+    "        # print(\"----------\")\n",
+    "        # print(f\"slow:{slow}\")\n",
+    "        l2 = self.sortList(slow)\n",
+    "#         print(f\"l2:{l2}\")\n",
+    "        \n",
+    "#         print('==========merge===========')\n",
+    "        \n",
+    "        return self.mergeTwoLists(l1, l2)\n",
+    "    \n",
+    "    def mergeTwoLists(self, l1, l2):\n",
+    "        head1 = ListNode(0)\n",
+    "        move = head1\n",
+    "        while l1 and l2:\n",
+    "            if l1.val < l2.val:\n",
+    "                move.next = l1\n",
+    "                l1 = l1.next\n",
+    "            else:\n",
+    "                move.next = l2\n",
+    "                l2 = l2.next\n",
+    "            move = move.next\n",
+    "        move.next = l1 if l1 else l2\n",
+    "        return head1.next"
+   ]
   }
  ],
  "metadata": {
