--- a/148.ipynb
+++ b/148.ipynb
@@ -8,18 +8,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"img/148-1.png\" style=\"zoom:70%\"/>\n",
+    "<img src=\"img/148-2.png\" style=\"zoom:70%\"/>"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,45 +28,35 @@
     "#         self.next = next\n",
     "class Solution:\n",
     "    def sortList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
-    "        if not head or not head.next:\n",
+    "        if not head or not head.next:#如果沒有head，或head只剩一個node，就結束sortList的遞迴\n",
     "            return head\n",
     "        \n",
     "        pre, slow, fast = head, head, head\n",
     "        while fast and fast.next:\n",
-    "            pre = slow\n",
+    "            pre = slow #紀錄slow的前一個，以便之後切半\n",
     "            slow = slow.next\n",
     "            fast = fast.next.next\n",
-    "        pre.next = None\n",
-    "        # print(f\"head:{head}\")\n",
-    "        # print(f\"slow:{slow}\")\n",
-    "        \n",
-    "        # print(\"+++++++++++\")\n",
-    "        # print(f\"head:{head}\")\n",
+    "        pre.next = None#切半，前半為head，後半為slow\n",
     "        l1 = self.sortList(head)\n",
-    "        # print(f\"l1:{l1}\")\n",
-    "        \n",
-    "        # print(\"----------\")\n",
-    "        # print(f\"slow:{slow}\")\n",
     "        l2 = self.sortList(slow)\n",
-    "#         print(f\"l2:{l2}\")\n",
-    "        \n",
-    "#         print('==========merge===========')\n",
     "        \n",
     "        return self.mergeTwoLists(l1, l2)\n",
     "    \n",
     "    def mergeTwoLists(self, l1, l2):\n",
-    "        head1 = ListNode(0)\n",
-    "        move = head1\n",
+    "        head = ListNode(0)\n",
+    "        move = head#原始move\n",
     "        while l1 and l2:\n",
+    "            #每次比較l1和l2的第一個node，較小的指定為move的下一個node，以此做排序\n",
     "            if l1.val < l2.val:\n",
-    "                move.next = l1\n",
-    "                l1 = l1.next\n",
+    "                move.next = l1#指定move的下一個node\n",
+    "                l1 = l1.next#第一個node已被指定排序，開頭移到下一個node，與l2做排序比較\n",
     "            else:\n",
     "                move.next = l2\n",
     "                l2 = l2.next\n",
-    "            move = move.next\n",
-    "        move.next = l1 if l1 else l2\n",
-    "        return head1.next"
+    "            move = move.next#move移到下一個node，才能指定之後的node (但head不會跟著移)\n",
+    "        move.next = l1 if l1 else l2#如果其中一個沒了，無法比較，此時另一個就是move的下一個node\n",
+    "        \n",
+    "        return head.next#head初始化時第一個node指定為0，須移到第二個node才能返回"
    ]
   }
  ],
