--- a/148.ipynb
+++ b/148.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/148-1.png\" style=\"zoom:90%\"/>\n",
-    "<img src=\"img/148-2.png\" style=\"zoom:90%\"/>"
+    "<img src=\"img/148.png\" style=\"zoom:90%\"/>"
    ]
   },
   {
@@ -58,14 +57,81 @@
     "        \n",
     "        return head.next#head初始化時第一個node指定為0，須移到第二個node才能返回"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "head = [4,2,1,3]\n",
+    "def Merge_Sort(array):\n",
+    "    if len(array) > 1:\n",
+    "        mid = len(array) // 2\n",
+    "        left_array = array[:mid]\n",
+    "        right_array = array[mid:]\n",
+    "\n",
+    "        Merge_Sort(left_array)\n",
+    "        Merge_Sort(right_array)\n",
+    "\n",
+    "        right_index = 0\n",
+    "        left_index = 0\n",
+    "        merged_index = 0\n",
+    "        while right_index < len(right_array) and left_index < len(left_array):\n",
+    "            if(right_array[right_index] < left_array[left_index]):\n",
+    "                array[merged_index] = right_array[right_index]\n",
+    "                right_index += 1\n",
+    "            else:\n",
+    "                array[merged_index] = left_array[left_index]\n",
+    "                left_index += 1\n",
+    "\n",
+    "            merged_index += 1\n",
+    "\n",
+    "        while right_index < len(right_array):\n",
+    "            array[merged_index] = right_array[right_index]\n",
+    "            right_index += 1\n",
+    "            merged_index += 1\n",
+    "\n",
+    "        while left_index < len(left_array):\n",
+    "            array[merged_index] = left_array[left_index]\n",
+    "            left_index += 1\n",
+    "            merged_index += 1\n",
+    "    # print(array)\n",
+    "\n",
+    "Merge_Sort(head)\n",
+    "print(head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c5c899ed1fea65c1aad495f30148e1731af1bcf36c22dbd1b46cba8952568d24"
+   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
