--- a/733.ipynb
+++ b/733.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### 1. 依序確認temp第i個位置 上下左右的數字 是否與目標位置舊的數字相同\n",
     "### 2. 相同的話就判斷是否已經被存入temp\n",
-    "### 3. 若為存入就加入temp\n",
+    "### 3. 若未存入就加入temp\n",
     "### 4. 將temp中的位置之數字轉為新的數值"
    ]
   },
