--- a/88.ipynb
+++ b/88.ipynb
@@ -25,11 +25,10 @@
     "        \"\"\"\n",
     "        Do not return anything, modify nums1 in-place instead.\n",
     "        \"\"\"\n",
-    "        nums = sorted(nums1[:m] + nums2)\n",
+    "        nums = sorted(nums1[:m] + nums2[:n])\n",
     "        \n",
     "        for i, num in enumerate(nums):\n",
-    "            nums1[i] = num\n",
-    "        "
+    "            nums1[i] = num"
    ]
   }
  ],
