--- a/118.ipynb
+++ b/118.ipynb
@@ -33,11 +33,85 @@
     "            a.append(b)\n",
     "        return a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def generate(self, numRows):\n",
+    "        \"\"\"\n",
+    "        :type numRows: int\n",
+    "        :rtype: List[List[int]]\n",
+    "        \"\"\"\n",
+    "        res = [[1]]\n",
+    "        for i in range(1, numRows):\n",
+    "            res.append(list(map(lambda x, y: x+y, res[-1] + [0], [0] + res[-1])))\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution(object):\n",
+    "    def generate(self, numRows):\n",
+    "        \"\"\"\n",
+    "        :type numRows: int\n",
+    "        :rtype: List[List[int]]\n",
+    "        \"\"\"\n",
+    "        res = [[1]]\n",
+    "        for i in range(1, numRows):\n",
+    "            a = res[-1] + [0]\n",
+    "            b = [0] + res[-1]\n",
+    "            res.append(list(map(lambda x, y: x+y, a, b)))\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
