--- a/219.ipynb
+++ b/219.ipynb
@@ -24,7 +24,7 @@
     "    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:\n",
     "        record = dict()\n",
     "        for i, num in enumerate(nums):\n",
-    "            if record.get(num, -1) != -1:\n",
+    "            if record.get(num, -1) != -1:#record.get(num, -1):有就返回該鍵的值，否則返回-1\n",
     "                if abs(record[num] - i) <= k:\n",
     "                    return True\n",
     "            record[num] = i\n",
@@ -35,8 +35,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
