--- a/724.ipynb
+++ b/724.ipynb
@@ -23,10 +23,22 @@
    "source": [
     "class Solution:\n",
     "    def pivotIndex(self, nums: List[int]) -> int:\n",
+    "        right = sum(nums)\n",
+    "        left = 0\n",
     "        for i in range(len(nums)):\n",
-    "            if sum(nums[:i]) == sum(nums[i+1:]):\n",
+    "            if i != 0: #有可能[1:]加總為0，此時第0個index是pivot index\n",
+    "                left += nums[i-1]\n",
+    "            right -= nums[i]\n",
+    "            print(left, right)\n",
+    "            if right == left:\n",
     "                return i\n",
-    "        return -1"
+    "            \n",
+    "        return -1\n",
+    "        \n",
+    "        # for i in range(len(nums)):\n",
+    "        #     if sum(nums[:i]) == sum(nums[i+1:]):\n",
+    "        #         return i\n",
+    "        # return -1"
    ]
   }
  ],
