--- a/821.ipynb
+++ b/821.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 812. Largest Triangle Area"
+    "## 821. Shortest Distance to a Character"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/812.svg\" style=\"zoom:100%\"/>"
+    "<img src=\"img/821.svg\" style=\"zoom:100%\"/>"
    ]
   },
   {
