--- a/69_Sqrt(x).ipynb
+++ b/69_Sqrt(x).ipynb
@@ -31,6 +31,7 @@
     }
    ],
    "source": [
+    "# 牛頓法\n",
     "class Solution:\n",
     "    def mySqrt(self, x: int) -> int:\n",
     "\n",
@@ -39,6 +40,46 @@
     "            num = (num **2 + x) / (2 * num)\n",
     "            \n",
     "        return int(num)\n",
+    "\n",
+    "Solution().mySqrt(36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 二分法\n",
+    "class Solution:\n",
+    "    def mySqrt(self, x: int) -> int:\n",
+    "        left, right = 0, x+1\n",
+    "\n",
+    "        while left < right:\n",
+    "            \n",
+    "            mid = (left + right) // 2\n",
+    "            sqrt1 = mid ** 2\n",
+    "            \n",
+    "            if (sqrt1 == x):\n",
+    "                return mid\n",
+    "            elif sqrt1 > x:\n",
+    "                right = mid\n",
+    "            else:\n",
+    "                left = mid + 1\n",
+    "        \n",
+    "        return left - 1 \n",
+    "        \n",
     "\n",
     "Solution().mySqrt(36)"
    ]
