--- a/148_Sort_List.ipynb
+++ b/148_Sort_List.ipynb
@@ -126,11 +126,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ac5c71763ce4af7d6dc057106aa53cb2371e41115cfc9dc46f264378d07e5f1a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": "Python 3.8.10 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -144,9 +141,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6c2898c30be5f73b03e044cf4b0ab3750666a8191d61a4c93b022a132c823988"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
