--- a/27_Remove_Element.ipynb
+++ b/27_Remove_Element.ipynb
@@ -30,13 +30,40 @@
     "                \n",
     "        return a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def removeElement(self, nums: List[int], val: int) -> int:\n",
+    "        a = 0\n",
+    "        for i in nums:\n",
+    "            if i != val:\n",
+    "                nums[a] = i\n",
+    "                a += 1\n",
+    "        return a"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6c2898c30be5f73b03e044cf4b0ab3750666a8191d61a4c93b022a132c823988"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
