--- a/179_Largest_Number.ipynb
+++ b/179_Largest_Number.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,51 @@
     "    def __lt__(x, y):\n",
     "        return x + y > y + x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9605343'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import cmp_to_key\n",
+    "\n",
+    "class Solution:\n",
+    "    def largestNumber(self, nums):\n",
+    "        nums = list(map(str, nums)) #int轉str\n",
+    "        nums = sorted(nums, key = cmp_to_key(lambda x, y: int(y+x) - int(x+y))) # 排序\n",
+    "        largest_num = ''.join(nums) #list中的元素相連\n",
+    "        \n",
+    "        if largest_num[0] == \"0\":#ex: [0, 0] -> output: \"0\"\n",
+    "            largest_num = \"0\"\n",
+    "        \n",
+    "        return largest_num\n",
+    "\n",
+    "Solution().largestNumber(nums = [3,60,34,5,9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d8c1a87e4764ea7881547c536887df2e9c9ef9a1d8b44ae688e9c35499972fab"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": "Python 3.8.10 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -59,9 +96,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6c2898c30be5f73b03e044cf4b0ab3750666a8191d61a4c93b022a132c823988"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
