--- a/69_Sqrt(x).ipynb
+++ b/69_Sqrt(x).ipynb
@@ -36,7 +36,7 @@
     "    def mySqrt(self, x: int) -> int:\n",
     "\n",
     "        num = x / 2\n",
-    "        while abs((num * num) -  x) > 0.1:\n",
+    "        while abs((num * num) -  x) >= 0.75:\n",
     "            num = (num **2 + x) / (2 * num)\n",
     "            \n",
     "        return int(num)\n",
