--- a/876_Middle_of_the_Linked_List.ipynb
+++ b/876_Middle_of_the_Linked_List.ipynb
@@ -37,6 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# head = ListNode{val: 1, next: ListNode{val: 2, next: ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}}}\n",
+    "\n",
     "# slow = ListNode{val: 2, next: ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}}\n",
     "# fast = ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}\n",
     "# slow = ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}\n",
