--- a/141_Linked_List_Cycle.ipynb
+++ b/141_Linked_List_Cycle.ipynb
@@ -125,11 +125,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d8c1a87e4764ea7881547c536887df2e9c9ef9a1d8b44ae688e9c35499972fab"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('.venv': venv)",
+   "display_name": "Python 3.8.7 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -143,9 +140,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6a07fcf0145f94b3f971c13d061528107de20ab7b779375f96dab9bbac6a85db"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
